# image_processing_project

course_project/: CMakeLists.txt
course_project/bin.dbg/: source.ilk
course_project/check/: photo_1_j.json  photo_2_j.json  photo_3_j.json  photo_4_j.json  photo_5_j.json  photo_6_j.json
course_project/course_project/: CMakeLists.txt  source.cpp
