project(source)
add_executable(source source.cpp)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/photo_1.jpg
DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/photo_2.jpg
DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/photo_3.jpg
DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/photo_4.jpg
DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/photo_5.jpg
DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/photo_6.jpg
DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
target_link_libraries(source ${OpenCV_LIBS})

